# AI-KnowledgeBase

./: .chroma-dev.yaml  .dockerignore  .env.example  .env.local-prod.example  .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  README.md  gitleaks.toml
services/registry-api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  openapi.yaml  pyproject.toml
services/registry-api/alembic/: env.py
services/registry-api/alembic/versions/: 0001_initial_registry_schema.py  0002_workflow_tasks.py  0003_document_assignments.py  (+22 more)
services/registry-api/app/: __init__.py  access_governance.py  api.py  assistant_observability.py  assistant_retention.py  audit.py  auth.py  config.py  database.py  errors.py  information_policy.py  ingestion_authorization.py  keycloak_directory.py  main.py  middleware.py  models.py  official_public_sources.py  permissions.py  public_delivery_limiter.py  public_documents.py  schemas.py  telemetry.py
services/registry-api/tests/: conftest.py  test_access_governance.py  test_admin_access.py  test_aiip_upload_governance.py  test_alembic_revisions.py  test_assistant_conversations.py  test_authz_audit.py  test_document_extractions.py  test_documents_versions.py  test_external_documents.py  test_health_and_config.py  test_information_policy_v2.py  test_ingestion_attempt_migration.py  test_ingestion_authorization.py  test_integration_idempotency.py  test_profile_settings.py  test_public_delivery_limiter.py  test_public_document_delivery.py  test_stratos_budget_upload_bridge.py  test_stratos_conformance_fixtures.py  test_workflow_tasks.py
(+832 files in other folders)
