[project]
name = "akl-registry-api"
version = "0.1.0"
description = "AKL Identity & Document Registry API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "opentelemetry-api>=1.29,<2.0",
  "opentelemetry-sdk>=1.29,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0,<1.0",
  "opentelemetry-instrumentation-httpx>=0.50b0,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.3,<3.0",
  "pyjwt[crypto]>=2.9,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "PyYAML>=6.0,<7.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
